// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Carousel stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  aria-roledescription="carousel"
  class="relative w-full max-w-xs"
  data-slot="carousel"
  role="region"
>
  <div
    class="overflow-hidden"
    data-slot="carousel-content"
  >
    <div
      class="flex -ml-4"
    >
      <div
        aria-roledescription="slide"
        class="min-w-0 shrink-0 grow-0 basis-full pl-4"
        data-slot="carousel-item"
        role="group"
      >
        <div
          class="flex aspect-square items-center justify-center bg-muted rounded-lg"
        >
          <span
            class="text-4xl font-semibold"
          >
            1
          </span>
        </div>
      </div>
      <div
        aria-roledescription="slide"
        class="min-w-0 shrink-0 grow-0 basis-full pl-4"
        data-slot="carousel-item"
        role="group"
      >
        <div
          class="flex aspect-square items-center justify-center bg-muted rounded-lg"
        >
          <span
            class="text-4xl font-semibold"
          >
            2
          </span>
        </div>
      </div>
      <div
        aria-roledescription="slide"
        class="min-w-0 shrink-0 grow-0 basis-full pl-4"
        data-slot="carousel-item"
        role="group"
      >
        <div
          class="flex aspect-square items-center justify-center bg-muted rounded-lg"
        >
          <span
            class="text-4xl font-semibold"
          >
            3
          </span>
        </div>
      </div>
      <div
        aria-roledescription="slide"
        class="min-w-0 shrink-0 grow-0 basis-full pl-4"
        data-slot="carousel-item"
        role="group"
      >
        <div
          class="flex aspect-square items-center justify-center bg-muted rounded-lg"
        >
          <span
            class="text-4xl font-semibold"
          >
            4
          </span>
        </div>
      </div>
      <div
        aria-roledescription="slide"
        class="min-w-0 shrink-0 grow-0 basis-full pl-4"
        data-slot="carousel-item"
        role="group"
      >
        <div
          class="flex aspect-square items-center justify-center bg-muted rounded-lg"
        >
          <span
            class="text-4xl font-semibold"
          >
            5
          </span>
        </div>
      </div>
    </div>
  </div>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all cursor-pointer disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute size-8 rounded-full top-1/2 -left-3 -translate-y-1/2"
    data-slot="carousel-previous"
    disabled=""
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-left"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m12 19-7-7 7-7"
      />
      <path
        d="M19 12H5"
      />
    </svg>
    <span
      class="sr-only"
    >
      Previous slide
    </span>
  </button>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all cursor-pointer disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute size-8 rounded-full top-1/2 -right-3 -translate-y-1/2"
    data-slot="carousel-next"
    disabled=""
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-right"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 12h14"
      />
      <path
        d="m12 5 7 7-7 7"
      />
    </svg>
    <span
      class="sr-only"
    >
      Next slide
    </span>
  </button>
</div>
`;

exports[`Carousel stories snapshot > Vertical story renders and matches snapshot 1`] = `
<div
  aria-roledescription="carousel"
  class="relative w-full max-w-xs"
  data-slot="carousel"
  role="region"
>
  <div
    class="overflow-hidden"
    data-slot="carousel-content"
  >
    <div
      class="flex flex-col -mt-1 h-[200px]"
    >
      <div
        aria-roledescription="slide"
        class="min-w-0 shrink-0 grow-0 basis-full pt-1 md:basis-1/2"
        data-slot="carousel-item"
        role="group"
      >
        <div
          class="flex aspect-square items-center justify-center bg-muted rounded-lg"
        >
          <span
            class="text-4xl font-semibold"
          >
            1
          </span>
        </div>
      </div>
      <div
        aria-roledescription="slide"
        class="min-w-0 shrink-0 grow-0 basis-full pt-1 md:basis-1/2"
        data-slot="carousel-item"
        role="group"
      >
        <div
          class="flex aspect-square items-center justify-center bg-muted rounded-lg"
        >
          <span
            class="text-4xl font-semibold"
          >
            2
          </span>
        </div>
      </div>
      <div
        aria-roledescription="slide"
        class="min-w-0 shrink-0 grow-0 basis-full pt-1 md:basis-1/2"
        data-slot="carousel-item"
        role="group"
      >
        <div
          class="flex aspect-square items-center justify-center bg-muted rounded-lg"
        >
          <span
            class="text-4xl font-semibold"
          >
            3
          </span>
        </div>
      </div>
      <div
        aria-roledescription="slide"
        class="min-w-0 shrink-0 grow-0 basis-full pt-1 md:basis-1/2"
        data-slot="carousel-item"
        role="group"
      >
        <div
          class="flex aspect-square items-center justify-center bg-muted rounded-lg"
        >
          <span
            class="text-4xl font-semibold"
          >
            4
          </span>
        </div>
      </div>
      <div
        aria-roledescription="slide"
        class="min-w-0 shrink-0 grow-0 basis-full pt-1 md:basis-1/2"
        data-slot="carousel-item"
        role="group"
      >
        <div
          class="flex aspect-square items-center justify-center bg-muted rounded-lg"
        >
          <span
            class="text-4xl font-semibold"
          >
            5
          </span>
        </div>
      </div>
    </div>
  </div>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all cursor-pointer disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute size-8 rounded-full -top-12 left-1/2 -translate-x-1/2 rotate-90"
    data-slot="carousel-previous"
    disabled=""
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-left"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m12 19-7-7 7-7"
      />
      <path
        d="M19 12H5"
      />
    </svg>
    <span
      class="sr-only"
    >
      Previous slide
    </span>
  </button>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all cursor-pointer disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute size-8 rounded-full -bottom-12 left-1/2 -translate-x-1/2 rotate-90"
    data-slot="carousel-next"
    disabled=""
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-right"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 12h14"
      />
      <path
        d="m12 5 7 7-7 7"
      />
    </svg>
    <span
      class="sr-only"
    >
      Next slide
    </span>
  </button>
</div>
`;

exports[`Carousel stories snapshot > WithImages story renders and matches snapshot 1`] = `
<div
  aria-roledescription="carousel"
  class="relative w-full max-w-xs"
  data-slot="carousel"
  role="region"
>
  <div
    class="overflow-hidden"
    data-slot="carousel-content"
  >
    <div
      class="flex -ml-4"
    >
      <div
        aria-roledescription="slide"
        class="min-w-0 shrink-0 grow-0 basis-full pl-4"
        data-slot="carousel-item"
        role="group"
      >
        <div
          class="flex aspect-square items-center justify-center bg-muted rounded-lg overflow-hidden"
        >
          <img
            alt="Slide 1"
            class="w-full h-full object-cover"
            src="https://images.unsplash.com/photo-1588345921523?w=400&h=400&fit=crop"
          />
        </div>
      </div>
      <div
        aria-roledescription="slide"
        class="min-w-0 shrink-0 grow-0 basis-full pl-4"
        data-slot="carousel-item"
        role="group"
      >
        <div
          class="flex aspect-square items-center justify-center bg-muted rounded-lg overflow-hidden"
        >
          <img
            alt="Slide 2"
            class="w-full h-full object-cover"
            src="https://images.unsplash.com/photo-1588345921524?w=400&h=400&fit=crop"
          />
        </div>
      </div>
      <div
        aria-roledescription="slide"
        class="min-w-0 shrink-0 grow-0 basis-full pl-4"
        data-slot="carousel-item"
        role="group"
      >
        <div
          class="flex aspect-square items-center justify-center bg-muted rounded-lg overflow-hidden"
        >
          <img
            alt="Slide 3"
            class="w-full h-full object-cover"
            src="https://images.unsplash.com/photo-1588345921525?w=400&h=400&fit=crop"
          />
        </div>
      </div>
    </div>
  </div>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all cursor-pointer disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute size-8 rounded-full top-1/2 -left-3 -translate-y-1/2"
    data-slot="carousel-previous"
    disabled=""
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-left"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m12 19-7-7 7-7"
      />
      <path
        d="M19 12H5"
      />
    </svg>
    <span
      class="sr-only"
    >
      Previous slide
    </span>
  </button>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all cursor-pointer disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute size-8 rounded-full top-1/2 -right-3 -translate-y-1/2"
    data-slot="carousel-next"
    disabled=""
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-right"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 12h14"
      />
      <path
        d="m12 5 7 7-7 7"
      />
    </svg>
    <span
      class="sr-only"
    >
      Next slide
    </span>
  </button>
</div>
`;
